--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -903,7 +903,7 @@
                         <div class="row">
                             <div class="col-6 col-md-4 col-lg-3 mb-3">
                                 <div role="button" class="btn btn-success btn-block mb-0 no-cursor-pointer">
-                                    <strong>Score is calculating using:</strong>
+                                    <strong>Score is calculated using:</strong>
                                     <br><code>(Same / (Total ^ 0.5)</code>
                                 </div>
                             </div>
