--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -907,6 +907,11 @@
                                     <br><code>(Same / (Total ^ 0.5)</code>
                                 </div>
                             </div>
+                            <div class="col-6 col-md-4 col-lg-3 mb-3">
+                                <div role="button" class="btn btn-success btn-block mb-0 no-cursor-pointer">
+                                    Scanning for same owners is very costly so does not get updated much
+                                </div>
+                            </div>
                         </div>
 
                         <h5>Similar by owners</h5>
