--- a/cmd/frontend/templates/apps.gohtml
+++ b/cmd/frontend/templates/apps.gohtml
@@ -40,6 +40,12 @@
             <div class="card-body">
 
                 <div class="row">
+                    <div class="d-none">
+                        {{/* This div is so Chrome auto-fills this one and not the rest! */}}
+                        <label for="hidden">Hidden</label>
+                        <select multiple data-placeholder="Hidden" class="form-control form-control-chosen" id="hidden" name="hidden">
+                        </select>
+                    </div>
                     <div class="col-sm-6 col-md-4">
                         <div class="form-group">
                             <label for="user">Your Games <small>(Must be logged in)</small></label>
