--- a/cmd/frontend/templates/bundles.gohtml
+++ b/cmd/frontend/templates/bundles.gohtml
@@ -30,7 +30,12 @@
             {{ template "packages_header" . }}
             <div class="card-body">
                 <div class="row">
-
+                    <div class="d-none">
+                        {{/* This div is so Chrome auto-fills this one and not the rest! */}}
+                        <label for="hidden">Hidden</label>
+                        <select multiple data-placeholder="Hidden" class="form-control form-control-chosen" id="hidden" name="hidden">
+                        </select>
+                    </div>
                     <div class="col-sm-6 col-md-4">
                         <div class="form-group">
                             <label for="type">Type</label>
