--- a/cmd/frontend/templates/packages.gohtml
+++ b/cmd/frontend/templates/packages.gohtml
@@ -14,6 +14,12 @@
             <div class="card-body">
 
                 <div class="row">
+                    <div class="d-none">
+                        {{/* This div is so Chrome auto-fills this one and not the rest! */}}
+                        <label for="hidden">Hidden</label>
+                        <select multiple data-placeholder="Hidden" class="form-control form-control-chosen" id="hidden" name="hidden">
+                        </select>
+                    </div>
                     <div class="col-sm-6 col-md-4 col-lg-3">
                         <div class="form-group">
                             <label for="status">Status</label>
