Add text to compare page

--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -560,7 +560,7 @@
                                     <i class="fas fa-spinner fa-spin"></i>
                                 </div>
                             </div>
-                            <small class="card-footer">From {{ comma64 .PlayersCount }} players. Not live.</small>
+                            <small class="card-footer">From {{ comma64 .PlayersCount }} Global Steam players.</small>
                         </div>
 
                         {{/* Top players table */}}
