--- a/cmd/frontend/templates/apps_compare.gohtml
+++ b/cmd/frontend/templates/apps_compare.gohtml
@@ -129,6 +129,7 @@
                                 <i class="fas fa-spinner fa-spin"></i>
                             </div>
                         </div>
+                        <small class="card-footer">From {{ comma64 .PlayersCount }} Global Steam players.</small>
                     </div>
 
                     <div class="card">
@@ -136,7 +137,7 @@
                         <div class="card-body p-0">
                             <script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/2213_RC01/embed_loader.js"></script>
                             {{ range .GoogleJSON }}
-                                <script type="text/javascript">trends.embed.renderExploreWidget("TIMESERIES", {{ . }});</script>
+                                <script type="text/javascript">trends.embed.renderExploreWidget('TIMESERIES', {{ . }});</script>
                             {{ end }}
                         </div>
                     </div>
