Update search field

--- a/cmd/frontend/templates/achievements.gohtml
+++ b/cmd/frontend/templates/achievements.gohtml
@@ -14,8 +14,8 @@
                 <div class="col-sm-12 col-lg-6">
 
                     <div class="input-group input-group-lg mt-1 mb-2">
-                        <input class="form-control" type="search" name="search" placeholder="Search for a Game" id="search" autofocus data-col-sort="2">
-                        <label for="search" class="sr-only sr-only-focusable">Search for achievements</label>
+                        <input class="form-control" type="search" name="search" placeholder="Search achievements" id="search" autofocus data-col-sort="2">
+                        <label for="search" class="sr-only sr-only-focusable">Search achievements</label>
                         <div class="input-group-append">
                             <input type="submit" value="Search" class="input-group-text">
                         </div>
